data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1162.wast
;; 3. **Test Description:**     - A loop with `br_if` conditioned to a false value at the start, followed by an `unreachable` and finally an `i32.const` pushing value onto the stack.    - **Constraint:** Ensure that `unreachable` within the loop causes an immediate trap.    - **Relation to Infinite Loops:** Misinterpreted `br_if` evaluation may cause the loop to run infinitely, ignoring `unreachable`.    - **Expected Behavior:** Trap should occur due to `unreachable`.

(assert_invalid
  (module
    (func $test-loop-with-unreachable
      (loop
        (br_if 0 (i32.const 0))
        (unreachable)
        (i32.const 42)
      )
    )
  )
  "unexpected stack state"
)